...
            android:layout_columnWeight="50"
            android:text="@string/distance"
            android:textAppearance="@style/MyTextAppearance" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cat_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginStart="@dimen/default_margin"
...
            android:scrollbars="vertical" />


    </GridLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:src="@drawable/ic_add_white_24dp"
...
