...
        <TextView
            android:id="@+id/catNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/add_cat_field_vertical_margin"
            android:labelFor="@id/catName"
            android:text="@string/cat_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/catName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tapImageMsg" />

...
        <TextView
            android:id="@+id/datePickerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/add_cat_field_vertical_margin"
            android:labelFor="@id/datePicker"
            android:text="@string/dob"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/breedLabel" />

        <TextView
...
