<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="@dimen/default_margin">

    <ImageView
        android:id="@+id/catImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/inmate_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/catNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/catImageView"
        android:layout_below="@+id/catImageView"
        app:layout_constraintTop_toBottomOf="@+id/catImageView"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/catDeleteImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/catImageView"
        android:layout_below="@+id/catImageView"
        android:contentDescription="@string/delete_button_description"
        android:padding="0dp"
        android:src="@drawable/ic_delete_forever_black_24dp"
        android:tint="?colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/catImageView"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
